1999-01-02  Mark Galassi  <rosalia@cygnus.com>

	* trig.c (gsl_sf_rect_to_polar_impl): introduced an #ifdef
	HAVE_HYPOT for systems that do not have the hypot() routine.

Sun Feb 14 20:59:50 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* Makefile.am (include_HEADERS): added gsl_sf_result.h

1998-12-05  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am: t-erf.c was commented out, which is a problem
	(pointed out by automake-1.3b).  Moved the commented-out t-erf.c
	line to the end of the long list of files.

	* legendre_poly.c (gsl_sf_legendre_Pl_impl):
	* legendre_con.c (gsl_sf_conicalP_xgt1_neg_mu_largetau_impl):
	added an ugly fix to the invocation of gsl_sf_bessel_Jn_impl() to
	give it two bogus arguments so that it builds.  I hope Jerry fixes
	it up soon!

	* gsl_sf_airy.h: added an include of gsl_precision.h so that
	gsl_prec_t is defined.

Tue Nov 17 17:29:31 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added #include <config.h> to all top-level source files

	* chebyshev.c (gsl_sf_cheb_eval_n): changed local gslMIN and
 	gslMAX to the standard GSL_MIN and GSL_MAX macros

Tue Aug 18 13:36:15 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* coulomb.c (C0sq): changed to using gsl_sf_expm1_impl instead of
 	expm1, since the latter is a GNU extension.

Mon Aug  3 14:43:16 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* bessel_amp_phase.h: undefined consts are now declared extern

Mon Jul 13 12:40:27 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gamma.c: changed all the factorial functions to take unsigned
 	int arguments, since negative values are not allowed.
	(gsl_sf_choose): fixed off by one error in call to factorial.

Sun Jul 12 13:21:41 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_sf_legendre.h, gsl_sf_poly.h, gsl_sf_pow_int.h: added
 	HAVE_INLINE around some inline definitions in the header files

	* gamma.c: implemented the natural versions of gsl_sf_lnchoose and
	gsl_sf_choose.

Wed Apr 15 21:27:48 1998  Brian Gough  <bjg@vvv.lanl.gov>
